cleaning up about page and the menu option

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,41 +4,41 @@
 <div class="container">
     <br>
     <hr>
-    <h3 class="text-white text-center">Thisalksdfhlaksdhf Im tired bro</h3>
+    <h3 class="text-white text-center mb-5">This project was mode for SRM product expo '23</h3>
     <div class="row">
         <div class="card text-white bg-secondary mb-3">
-            <div class="card-header">im fed up</div>
+            <div class="card-header">What is the project?</div>
             <div class="card-body">
-                <p class="card-text display-4 ">THANK YOU SO MUCH FOR EVEN CHECKING OUT THIS PAGE</p>
+                <h3>
+                    <li class="text-white">This project aims at replacing paper bills</li>
+                    <li class="text-white">Each order represents a transaction</li>
+                    <li class="text-white">The tokens are identified by the unique id that is either from scanned from rfid or manually entered</li>
+                    <li class="text-white">The orders can be done at one place and redeemed at another</li>
+                    <li class="text-white">It can be also be bought in bulk, like lunch coupons</li>
+                </h3>
             </div>
         </div>
     </div>
-    <div class="row">
+    <hr>
+
+    <div class="row mb-3">
 
         <div class="container">
 
             <div class="row text-white">
                 <div class="row">
-                    <div class="col-md-4">
-                        <img class="rounded-circle" src="https://source.unsplash.com/random/140x140" alt="Generic placeholder image" width="140" height="140">
-                        <h2>tweaked tf by</h2>
-                        <p>my asshole.</p>
-                        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <div class="col-md-6">
+                        <img class="rounded-circle" src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="Generic placeholder image" width="140" height="140">
+                        <h2>Check out the code!</h2>
+                        <p><a class="btn btn-secondary" href="https://github.com/fadh1l/rfid-system" role="button">Github &raquo;</a></p>
                     </div>
 
-                    <div class="col-md-4">
-                        <img class="rounded-circle" src="https://source.unsplash.com/random/140x141" alt="Generic placeholder image" width="140" height="140">
-                        <h2>front end stuff by</h2>
-                        <p>again me</p>
-                        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <div class="col-md-6">
+                        <img class="rounded-circle" src="https://images.unsplash.com/photo-1551373884-8a0750074df7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="Generic placeholder image" width="140" height="140">
+                        <h2>More about me?</h2>
+                        <p><a class="btn btn-secondary" href="https://fadh1l.github.io/" role="button">View details &raquo;</a></p>
                     </div>
 
-                    <div class="col-md-4">
-                        <img class="rounded-circle" src="https://source.unsplash.com/random/200x200" alt="Generic placeholder image" width="140" height="140">
-                        <h2>backend stuff</h2>
-                        <p>only me coz i have no frens :'(</p>
-                        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-                    </div>
                 </div>
 
             </div>
@@ -46,6 +46,8 @@
 
         </div>
     </div>
+
+
 </div>
 
 </div>
