--- a/templates/base.html
+++ b/templates/base.html
@@ -21,19 +21,91 @@
         <nav class="navbar navbar-dark bg-dark ">
             <a class="navbar-brand text-info" href="/">Online Token System</a>
             <div class="mr-auto"></div>
-            <button class="btn btn-outline-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">extras?
+            <button class="btn btn-outline-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Menu
 </button>
             <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">brainstorrrrrrrm
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Menu
                     </h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <p>maybe do something in this space like adding in an index of items with prices of idk maybe the orders again or some sorta instructions, tbh no idea. Now for some lorem fun Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio
-                        nisi delectus dolores autem asperiores itaque, minima magnam placeat exercitationem quod, maiores culpa ipsam impedit dolorem consequuntur eos suscipit ex, maxime ut blanditiis ratione quidem? Accusamus, libero consequatur vitae
-                        sit illum molestiae aliquam, dicta doloribus autem, officiis inventore amet nemo? Ut! <img src="https://images.unsplash.com/photo-1495568995596-9e40959aa178?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1106&q=80"
-                            class="d-block w-100" alt="...">
+                    <div class="container">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Indian Food Name</th>
+                                    <th>Shortcode</th>
+                                    <th>Price (INR)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Large Ghee Dosa</td>
+                                    <td>LGD</td>
+                                    <td>200</td>
+                                </tr>
+                                <tr>
+                                    <td>Butter Chicken</td>
+                                    <td>BC</td>
+                                    <td>350</td>
+                                </tr>
+                                <tr>
+                                    <td>Paneer Tikka</td>
+                                    <td>PT</td>
+                                    <td>250</td>
+                                </tr>
+                                <tr>
+                                    <td>Masala Dosa</td>
+                                    <td>MD</td>
+                                    <td>150</td>
+                                </tr>
+                                <tr>
+                                    <td>Chicken Biryani</td>
+                                    <td>CB</td>
+                                    <td>300</td>
+                                </tr>
+                                <tr>
+                                    <td>Palak Paneer</td>
+                                    <td>PP</td>
+                                    <td>220</td>
+                                </tr>
+                                <tr>
+                                    <td>Naan</td>
+                                    <td>NN</td>
+                                    <td>50</td>
+                                </tr>
+                                <tr>
+                                    <td>Samosa</td>
+                                    <td>SM</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>Rajma Chawal</td>
+                                    <td>RC</td>
+                                    <td>180</td>
+                                </tr>
+                                <tr>
+                                    <td>Pani Puri</td>
+                                    <td>PP</td>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <td>Mutton Curry</td>
+                                    <td>MC</td>
+                                    <td>400</td>
+                                </tr>
+                                <tr>
+                                    <td>Gulab Jamun</td>
+                                    <td>GJ</td>
+                                    <td>80</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+
+                    <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="nav-link text-info" href="/orders">Orders <span class="sr-only">(current)</span></a>
